verification through one gmail

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <h1>It is a main page of my first fullstack webapp</h1>
         <div class="reg-log">
-            <a href="/registartion">To Registartion</a>
+            <a href="/registration">To Registartion</a>
             <a href="/dashboard">To Dashboard</a>
             <a href="/login">To Login</a>
         </div>
