--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <form action="/api/dashboard" method="get" id="form"> 
+    <form action="/api/login" method="get" id="form"> 
         <h1>Login</h1>
         <div>
             <label for="email">Email</label>
