--- a/public/pages/registration/index.html
+++ b/public/pages/registration/index.html
@@ -9,7 +9,7 @@
     <script defer src="/js/registration.js"></script>
 </head>
 <body>
-    <form action="/api/dashboard" method="post" id="firstForm"> 
+    <form action="/api/registration" method="POST" id="firstForm"> 
         <h1>Registration</h1>
         <div>
             <label for="name">Name</label>
