--- a/public/pages/registration/verification.html
+++ b/public/pages/registration/verification.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <h1>Verification</h1>
-    <form action="/registration/verification" method="POST">
+    <form action="/api/registration/verification?email=krytoykirilltypo%40gmail.com" method="POST">
         <div class="inputs" id="inputs">
-            <input type="text" maxlength="1" inputmode="numeric" id="input1">
-            <input type="text" maxlength="1" inputmode="numeric" id="input2">
-            <input type="text" maxlength="1" inputmode="numeric" id="input3">
-            <input type="text" maxlength="1" inputmode="numeric" id="input4">
-            <input type="text" maxlength="1" inputmode="numeric" id="input5">
-            <input type="text" maxlength="1" inputmode="numeric" id="input6">
+            <input type="text" maxlength="1" inputmode="numeric" id="input1" name="input1">
+            <input type="text" maxlength="1" inputmode="numeric" id="input2" name="input2">
+            <input type="text" maxlength="1" inputmode="numeric" id="input3" name="input3">
+            <input type="text" maxlength="1" inputmode="numeric" id="input4" name="input4">
+            <input type="text" maxlength="1" inputmode="numeric" id="input5" name="input5">
+            <input type="text" maxlength="1" inputmode="numeric" id="input6" name="input6">
         </div>
         <label>Type the code you got on email and hit submit</label>
         <button type="submit">Submit</button>
