--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -14,7 +14,7 @@
         <div class="wrapper">
             <button id="getUsers">Get Users</button>
             <button id="hideUsers">Hide Users</button>
-            <a href="/registartion">To Registartion</a>
+            <a href="/registration">To Registartion</a>
             <a href="/">To main page</a>
         </div>
         <table id="usersTable">
