works with all email adresses

--- a/public/pages/registration/verification.html
+++ b/public/pages/registration/verification.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Verification</h1>
-    <form action="/api/registration/verification?email=krytoykirilltypo%40gmail.com" method="POST">
+    <form method="POST">
         <div class="inputs" id="inputs">
             <input type="text" maxlength="1" inputmode="numeric" id="input1" name="input1">
             <input type="text" maxlength="1" inputmode="numeric" id="input2" name="input2">
